--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,15 @@
 {
   "version": 2,
   "builds": [
-    { "src": "backend/server.js", "use": "@vercel/node" }
+    {
+      "src": "BACKEND-INVOICE/backend/server.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "backend/server.js" }
+    {
+      "src": "/api/(.*)",
+      "dest": "BACKEND-INVOICE/backend/server.js"
+    }
   ]
 }
